"""AI æ™ºèƒ½å®¢æœæœåŠ¡"""
import uuid
import json
import base64
from datetime import datetime
from typing import Optional, List, Dict, Any
import anthropic
from motor.motor_asyncio import AsyncIOMotorClient
import redis.asyncio as redis
import httpx

from .config import get_settings
from .models import (
    IssueCategory, IssueUrgency, DiagnosisResult, FixStatus, MessageRole,
    Message, SupportSession, AutoDiagnosis, AutoFix, FixAttempt,
    ScreenshotAnalysis, SupportRequest, SupportResponse, FixRequest, FixResponse
)


# é—®é¢˜ç±»åˆ«çš„äººè¯æè¿°å’Œè¯Šæ–­è§„åˆ™
ISSUE_CONFIGS: Dict[IssueCategory, Dict[str, Any]] = {
    IssueCategory.CANNOT_ACCESS: {
        "label": "æ‰“ä¸å¼€ç½‘ç«™",
        "icon": "ğŸš«",
        "quick_diagnosis": [
            "æ£€æŸ¥ç½‘å€æ˜¯å¦æ­£ç¡®",
            "æ£€æŸ¥ç½‘ç»œè¿æ¥",
            "æ£€æŸ¥æœåŠ¡å™¨çŠ¶æ€"
        ],
        "common_causes": [
            "ç½‘å€è¾“å…¥é”™è¯¯",
            "ç½‘ç»œä¸ç¨³å®š",
            "æœåŠ¡å™¨æ­£åœ¨ç»´æŠ¤",
            "åŸŸåè¿‡æœŸ"
        ],
        "auto_fixes": ["check_server_status", "refresh_dns", "restart_service"]
    },
    IssueCategory.LOGIN_FAILED: {
        "label": "ç™»å½•ä¸ä¸Š",
        "icon": "ğŸ”",
        "quick_diagnosis": [
            "æ£€æŸ¥è´¦å·å¯†ç æ˜¯å¦æ­£ç¡®",
            "æ£€æŸ¥å¤§å°å†™",
            "æ£€æŸ¥æ˜¯å¦æœ‰ç©ºæ ¼"
        ],
        "common_causes": [
            "å¯†ç è¾“å…¥é”™è¯¯",
            "è´¦å·ä¸å­˜åœ¨",
            "è´¦å·è¢«é”å®š",
            "æµè§ˆå™¨ç¼“å­˜é—®é¢˜"
        ],
        "auto_fixes": ["reset_password", "unlock_account", "clear_session"]
    },
    IssueCategory.FEATURE_BROKEN: {
        "label": "åŠŸèƒ½ä¸å¥½ç”¨",
        "icon": "âš™ï¸",
        "quick_diagnosis": [
            "ç¡®è®¤å…·ä½“æ˜¯å“ªä¸ªåŠŸèƒ½",
            "æ£€æŸ¥æ“ä½œæ­¥éª¤",
            "æ£€æŸ¥æ•°æ®æ˜¯å¦æ­£ç¡®"
        ],
        "common_causes": [
            "æ“ä½œæ–¹å¼ä¸å¯¹",
            "æ•°æ®æ ¼å¼é”™è¯¯",
            "ç³»ç»ŸBug",
            "æƒé™ä¸è¶³"
        ],
        "auto_fixes": ["check_permissions", "clear_cache", "retry_operation"]
    },
    IssueCategory.SLOW_PERFORMANCE: {
        "label": "è¿è¡Œå¤ªæ…¢",
        "icon": "ğŸŒ",
        "quick_diagnosis": [
            "æ£€æŸ¥ç½‘ç»œé€Ÿåº¦",
            "æ£€æŸ¥æœåŠ¡å™¨è´Ÿè½½",
            "æ£€æŸ¥æ•°æ®é‡"
        ],
        "common_causes": [
            "ç½‘ç»œä¸å¥½",
            "æœåŠ¡å™¨å‹åŠ›å¤§",
            "æ•°æ®å¤ªå¤š",
            "æµè§ˆå™¨å¤ªå¡"
        ],
        "auto_fixes": ["optimize_database", "clear_cache", "scale_resources"]
    },
    IssueCategory.DATA_LOST: {
        "label": "æ•°æ®ä¸¢å¤±",
        "icon": "ğŸ“­",
        "quick_diagnosis": [
            "ç¡®è®¤æ•°æ®æ˜¯å¦çœŸçš„ä¸¢å¤±",
            "æ£€æŸ¥ç­›é€‰æ¡ä»¶",
            "æ£€æŸ¥å›æ”¶ç«™"
        ],
        "common_causes": [
            "ç­›é€‰æ¡ä»¶é—®é¢˜",
            "è¯¯åˆ é™¤",
            "åŒæ­¥å»¶è¿Ÿ",
            "ç³»ç»Ÿæ•…éšœ"
        ],
        "auto_fixes": ["check_trash", "restore_backup", "sync_data"]
    },
    IssueCategory.DISPLAY_ERROR: {
        "label": "æ˜¾ç¤ºæœ‰é—®é¢˜",
        "icon": "ğŸ–¼ï¸",
        "quick_diagnosis": [
            "åˆ·æ–°é¡µé¢",
            "æ¸…é™¤ç¼“å­˜",
            "æ¢ä¸ªæµè§ˆå™¨è¯•è¯•"
        ],
        "common_causes": [
            "ç¼“å­˜é—®é¢˜",
            "æµè§ˆå™¨å…¼å®¹æ€§",
            "ç½‘ç»œåŠ è½½ä¸å®Œæ•´",
            "æ ·å¼é”™è¯¯"
        ],
        "auto_fixes": ["clear_browser_cache", "force_refresh", "fix_styles"]
    },
    IssueCategory.PAYMENT_ISSUE: {
        "label": "æ”¯ä»˜é—®é¢˜",
        "icon": "ğŸ’³",
        "quick_diagnosis": [
            "æ£€æŸ¥æ”¯ä»˜çŠ¶æ€",
            "æ£€æŸ¥é“¶è¡Œå¡ä½™é¢",
            "æ£€æŸ¥æ”¯ä»˜é™é¢"
        ],
        "common_causes": [
            "ä½™é¢ä¸è¶³",
            "ç½‘ç»œè¶…æ—¶",
            "æ”¯ä»˜æ¸ é“é—®é¢˜",
            "è®¢å•çŠ¶æ€å¼‚å¸¸"
        ],
        "auto_fixes": ["check_payment_status", "retry_payment", "refund"]
    },
    IssueCategory.DONT_KNOW_HOW: {
        "label": "ä¸ä¼šæ“ä½œ",
        "icon": "â“",
        "quick_diagnosis": [
            "äº†è§£ç”¨æˆ·è¦åšä»€ä¹ˆ",
            "æä¾›æ“ä½œæŒ‡å¼•",
            "æ¨èæ•™ç¨‹"
        ],
        "common_causes": [
            "æ–°ç”¨æˆ·ä¸ç†Ÿæ‚‰",
            "åŠŸèƒ½æ›´æ–°",
            "æ“ä½œå¤æ‚"
        ],
        "auto_fixes": ["show_tutorial", "guide_steps", "connect_guide"]
    },
    IssueCategory.OTHER: {
        "label": "å…¶ä»–é—®é¢˜",
        "icon": "ğŸ“",
        "quick_diagnosis": [
            "è¯¦ç»†äº†è§£é—®é¢˜",
            "æ”¶é›†æ›´å¤šä¿¡æ¯"
        ],
        "common_causes": [],
        "auto_fixes": []
    }
}

# è‡ªåŠ¨ä¿®å¤æ–¹æ¡ˆ
AUTO_FIX_TEMPLATES: Dict[str, AutoFix] = {
    "check_server_status": AutoFix(
        id="check_server_status",
        name="æ£€æŸ¥æœåŠ¡çŠ¶æ€",
        description="æˆ‘æ¥å¸®æ‚¨æ£€æŸ¥ä¸€ä¸‹æœåŠ¡å™¨æ˜¯ä¸æ˜¯æ­£å¸¸è¿è¡Œ",
        steps=["æ£€æŸ¥APIå¥åº·", "æ£€æŸ¥æ•°æ®åº“è¿æ¥", "æ£€æŸ¥åŸŸåè§£æ"],
        risk_level="low",
        estimated_time=10,
        requires_confirmation=False,
        rollback_available=False
    ),
    "refresh_dns": AutoFix(
        id="refresh_dns",
        name="åˆ·æ–°åŸŸåè§£æ",
        description="æœ‰æ—¶å€™åŸŸåè§£æä¼šæœ‰å»¶è¿Ÿï¼Œæˆ‘å¸®æ‚¨åˆ·æ–°ä¸€ä¸‹",
        steps=["æ¸…é™¤DNSç¼“å­˜", "é‡æ–°è§£æåŸŸå", "éªŒè¯è¿æ¥"],
        risk_level="low",
        estimated_time=30,
        requires_confirmation=False,
        rollback_available=False
    ),
    "restart_service": AutoFix(
        id="restart_service",
        name="é‡å¯æœåŠ¡",
        description="é‡å¯ä¸€ä¸‹æœåŠ¡ï¼Œå°±åƒé‡å¯ç”µè„‘ä¸€æ ·ï¼Œå¾ˆå¤šå°é—®é¢˜éƒ½èƒ½è§£å†³",
        steps=["ä¿å­˜å½“å‰çŠ¶æ€", "é‡å¯åº”ç”¨æœåŠ¡", "éªŒè¯æœåŠ¡æ¢å¤"],
        risk_level="medium",
        estimated_time=60,
        requires_confirmation=True,
        rollback_available=True
    ),
    "reset_password": AutoFix(
        id="reset_password",
        name="é‡ç½®å¯†ç ",
        description="æˆ‘å¸®æ‚¨å‘ä¸€å°é‡ç½®å¯†ç çš„é‚®ä»¶åˆ°æ‚¨çš„é‚®ç®±",
        steps=["éªŒè¯ç”¨æˆ·èº«ä»½", "ç”Ÿæˆé‡ç½®é“¾æ¥", "å‘é€é‚®ä»¶"],
        risk_level="low",
        estimated_time=15,
        requires_confirmation=True,
        rollback_available=False
    ),
    "unlock_account": AutoFix(
        id="unlock_account",
        name="è§£é”è´¦å·",
        description="æ‚¨çš„è´¦å·å¯èƒ½å› ä¸ºå¤šæ¬¡ç™»å½•å¤±è´¥è¢«é”äº†ï¼Œæˆ‘å¸®æ‚¨è§£é”",
        steps=["æ£€æŸ¥è´¦å·çŠ¶æ€", "ç§»é™¤é”å®šæ ‡è®°", "é‡ç½®å¤±è´¥è®¡æ•°"],
        risk_level="low",
        estimated_time=5,
        requires_confirmation=True,
        rollback_available=True
    ),
    "clear_session": AutoFix(
        id="clear_session",
        name="æ¸…é™¤ç™»å½•çŠ¶æ€",
        description="æ¸…é™¤ä¹‹å‰çš„ç™»å½•è®°å½•ï¼Œè®©æ‚¨é‡æ–°ç™»å½•",
        steps=["æ¸…é™¤æœåŠ¡ç«¯ä¼šè¯", "é€šçŸ¥æ¸…é™¤Cookie", "å¼•å¯¼é‡æ–°ç™»å½•"],
        risk_level="low",
        estimated_time=5,
        requires_confirmation=True,
        rollback_available=False
    ),
    "clear_cache": AutoFix(
        id="clear_cache",
        name="æ¸…é™¤ç¼“å­˜",
        description="æ¸…é™¤ç³»ç»Ÿç¼“å­˜ï¼Œè®©é¡µé¢é‡æ–°åŠ è½½æœ€æ–°æ•°æ®",
        steps=["æ¸…é™¤åº”ç”¨ç¼“å­˜", "æ¸…é™¤CDNç¼“å­˜", "åˆ·æ–°é¡µé¢"],
        risk_level="low",
        estimated_time=10,
        requires_confirmation=False,
        rollback_available=False
    ),
    "restore_backup": AutoFix(
        id="restore_backup",
        name="æ¢å¤å¤‡ä»½",
        description="ä»æœ€è¿‘çš„å¤‡ä»½æ¢å¤æ‚¨çš„æ•°æ®",
        steps=["æŸ¥æ‰¾æœ€è¿‘å¤‡ä»½", "ç¡®è®¤æ¢å¤èŒƒå›´", "æ‰§è¡Œæ¢å¤", "éªŒè¯æ•°æ®"],
        risk_level="high",
        estimated_time=300,
        requires_confirmation=True,
        rollback_available=True
    ),
    "show_tutorial": AutoFix(
        id="show_tutorial",
        name="æ‰“å¼€æ•™ç¨‹",
        description="æˆ‘æ¥ç»™æ‚¨çœ‹ä¸€ä¸‹æ€ä¹ˆæ“ä½œ",
        steps=["è¯†åˆ«åŠŸèƒ½ç‚¹", "åŒ¹é…æ•™ç¨‹", "å¼€å§‹å¼•å¯¼"],
        risk_level="low",
        estimated_time=5,
        requires_confirmation=False,
        rollback_available=False
    ),
    "connect_guide": AutoFix(
        id="connect_guide",
        name="å¯åŠ¨äº§å“å¯¼æ¸¸",
        description="è®©AIå¯¼æ¸¸ä¸€æ­¥ä¸€æ­¥æ•™æ‚¨æ“ä½œ",
        steps=["åˆ†æç”¨æˆ·éœ€æ±‚", "åˆ›å»ºå¼•å¯¼ä¼šè¯", "å¼€å§‹å¼•å¯¼"],
        risk_level="low",
        estimated_time=5,
        requires_confirmation=False,
        rollback_available=False
    )
}


class AISupportService:
    """AI æ™ºèƒ½å®¢æœæœåŠ¡"""

    def __init__(self):
        self.settings = get_settings()
        self.client = anthropic.AsyncAnthropic(api_key=self.settings.anthropic_api_key)
        self.mongo_client: Optional[AsyncIOMotorClient] = None
        self.redis_client: Optional[redis.Redis] = None
        self.db = None

    async def connect(self):
        """è¿æ¥æ•°æ®åº“"""
        self.mongo_client = AsyncIOMotorClient(self.settings.mongodb_uri)
        self.db = self.mongo_client[self.settings.mongodb_database]
        self.redis_client = redis.from_url(self.settings.redis_url)

    async def disconnect(self):
        """æ–­å¼€è¿æ¥"""
        if self.mongo_client:
            self.mongo_client.close()
        if self.redis_client:
            await self.redis_client.close()

    async def handle_request(self, request: SupportRequest) -> SupportResponse:
        """å¤„ç†å®¢æœè¯·æ±‚"""
        # è·å–æˆ–åˆ›å»ºä¼šè¯
        if request.session_id:
            session = await self._get_session(request.session_id)
            if not session:
                session = await self._create_session(request)
        else:
            session = await self._create_session(request)

        # æ·»åŠ ç”¨æˆ·æ¶ˆæ¯
        user_message = Message(
            id=str(uuid.uuid4()),
            role=MessageRole.USER,
            content=request.message
        )
        session.messages.append(user_message)

        # åˆ†ææˆªå›¾ï¼ˆå¦‚æœæœ‰ï¼‰
        screenshot_analysis = None
        if request.screenshot_base64:
            screenshot_analysis = await self._analyze_screenshot(request.screenshot_base64)

        # è‡ªåŠ¨è¯Šæ–­
        diagnosis = await self._diagnose(session, request.message, screenshot_analysis)
        session.diagnosis = diagnosis.model_dump()

        # å¦‚æœæ˜¯"ä¸ä¼šç”¨"ç±»å‹ï¼Œè¿æ¥åˆ°AIå¯¼æ¸¸
        if diagnosis.category == IssueCategory.DONT_KNOW_HOW:
            return await self._connect_to_guide(session, request)

        # ç”Ÿæˆ AI å›å¤
        ai_response = await self._generate_response(session, diagnosis, screenshot_analysis)

        # è·å–å»ºè®®çš„ä¿®å¤æ–¹æ¡ˆ
        suggested_fixes = self._get_suggested_fixes(diagnosis)

        # ç”Ÿæˆå¿«æ·å›å¤
        quick_replies = self._generate_quick_replies(diagnosis)

        # æ£€æŸ¥æ˜¯å¦éœ€è¦äººå·¥
        need_human = self._should_escalate(session, diagnosis)

        # æ·»åŠ  AI æ¶ˆæ¯
        assistant_message = Message(
            id=str(uuid.uuid4()),
            role=MessageRole.ASSISTANT,
            content=ai_response
        )
        session.messages.append(assistant_message)
        session.category = diagnosis.category
        session.updated_at = datetime.now()

        # ä¿å­˜ä¼šè¯
        await self._save_session(session)

        return SupportResponse(
            session_id=session.id,
            message=ai_response,
            diagnosis=diagnosis,
            suggested_fixes=suggested_fixes,
            quick_replies=quick_replies,
            need_human=need_human,
            escalation_reason="å¤šæ¬¡å°è¯•æœªèƒ½è§£å†³ï¼Œå»ºè®®äººå·¥ä»‹å…¥" if need_human else None
        )

    async def execute_fix(self, request: FixRequest) -> FixResponse:
        """æ‰§è¡Œä¿®å¤"""
        session = await self._get_session(request.session_id)
        if not session:
            return FixResponse(
                success=False,
                message="æ‰¾ä¸åˆ°ä¼šè¯è®°å½•ï¼Œè¯·é‡æ–°æè¿°æ‚¨çš„é—®é¢˜"
            )

        fix = AUTO_FIX_TEMPLATES.get(request.fix_id)
        if not fix:
            return FixResponse(
                success=False,
                message="ä¿®å¤æ–¹æ¡ˆä¸å­˜åœ¨"
            )

        # è®°å½•ä¿®å¤å°è¯•
        attempt = FixAttempt(
            fix_id=fix.id,
            fix_name=fix.name,
            started_at=datetime.now()
        )

        try:
            # æ‰§è¡Œä¿®å¤
            result = await self._execute_fix_action(session, fix)

            attempt.completed_at = datetime.now()
            attempt.success = result["success"]

            session.fix_attempts.append(attempt.model_dump())

            if result["success"]:
                session.fix_status = FixStatus.FIXED
                session.resolved = True
                session.resolution = fix.name

            await self._save_session(session)

            return FixResponse(
                success=result["success"],
                message=result["message"],
                details=result.get("details"),
                next_steps=result.get("next_steps", [])
            )

        except Exception as e:
            attempt.completed_at = datetime.now()
            attempt.success = False
            attempt.error = str(e)
            session.fix_attempts.append(attempt.model_dump())
            session.fix_status = FixStatus.FAILED
            await self._save_session(session)

            return FixResponse(
                success=False,
                message=f"ä¿®å¤è¿‡ç¨‹ä¸­å‡ºé”™äº†ï¼š{self._translate_error(str(e))}",
                next_steps=["æ‚¨å¯ä»¥å†è¯•ä¸€æ¬¡", "æˆ–è€…è”ç³»äººå·¥å®¢æœ"]
            )

    async def _analyze_screenshot(self, base64_image: str) -> ScreenshotAnalysis:
        """ä½¿ç”¨ Claude Vision åˆ†ææˆªå›¾"""
        try:
            # ç¡®ä¿ base64 æ ¼å¼æ­£ç¡®
            if not base64_image.startswith("data:"):
                base64_image = f"data:image/png;base64,{base64_image}"

            response = await self.client.messages.create(
                model=self.settings.vision_model,
                max_tokens=1000,
                messages=[{
                    "role": "user",
                    "content": [
                        {
                            "type": "image",
                            "source": {
                                "type": "base64",
                                "media_type": "image/png",
                                "data": base64_image.split(",")[1] if "," in base64_image else base64_image
                            }
                        },
                        {
                            "type": "text",
                            "text": """åˆ†æè¿™å¼ æˆªå›¾ï¼Œå‘Šè¯‰æˆ‘ï¼š
1. æ˜¯å¦æœ‰é”™è¯¯ä¿¡æ¯ï¼Ÿå¦‚æœæœ‰ï¼Œæ˜¯ä»€ä¹ˆé”™è¯¯ï¼Ÿ
2. é¡µé¢æ˜¾ç¤ºæ˜¯å¦æ­£å¸¸ï¼Ÿ
3. ç”¨æˆ·å¯èƒ½é‡åˆ°äº†ä»€ä¹ˆé—®é¢˜ï¼Ÿ
4. æœ‰ä»€ä¹ˆå»ºè®®ï¼Ÿ

ç”¨ç®€å•çš„ä¸­æ–‡å›ç­”ï¼Œå‡è®¾ç”¨æˆ·å®Œå…¨ä¸æ‡‚æŠ€æœ¯ã€‚
è¿”å›JSONæ ¼å¼ï¼š
{
  "has_error": true/false,
  "error_type": "é”™è¯¯ç±»å‹ï¼ˆå¦‚æœæœ‰ï¼‰",
  "error_message": "é”™è¯¯ä¿¡æ¯ï¼ˆç¿»è¯‘æˆäººè¯ï¼‰",
  "visible_elements": ["çœ‹åˆ°çš„ä¸»è¦å…ƒç´ "],
  "suggestions": ["å»ºè®®1", "å»ºè®®2"],
  "description": "ç”¨ä¸€å¥è¯æè¿°çœ‹åˆ°äº†ä»€ä¹ˆ"
}"""
                        }
                    ]
                }]
            )

            content = response.content[0].text

            # è§£æ JSON
            if "```json" in content:
                content = content.split("```json")[1].split("```")[0]
            elif "```" in content:
                content = content.split("```")[1].split("```")[0]

            data = json.loads(content)
            return ScreenshotAnalysis(**data)

        except Exception as e:
            return ScreenshotAnalysis(
                has_error=False,
                description=f"æˆªå›¾åˆ†ææš‚æ—¶ä¸å¯ç”¨ï¼š{str(e)}"
            )

    async def _diagnose(
        self,
        session: SupportSession,
        message: str,
        screenshot_analysis: Optional[ScreenshotAnalysis]
    ) -> AutoDiagnosis:
        """AI è¯Šæ–­é—®é¢˜"""
        # æ„å»ºè¯Šæ–­æç¤º
        context = f"""ç”¨æˆ·æ¶ˆæ¯ï¼š{message}

ä¼šè¯å†å²ï¼š
{self._format_messages(session.messages[-5:])}

{"æˆªå›¾åˆ†æï¼š" + screenshot_analysis.description if screenshot_analysis else "ï¼ˆæ²¡æœ‰æˆªå›¾ï¼‰"}
"""

        system_prompt = """ä½ æ˜¯ä¸€ä¸ªæ™ºèƒ½å®¢æœè¯Šæ–­ç³»ç»Ÿï¼Œéœ€è¦åˆ†æç”¨æˆ·é‡åˆ°çš„é—®é¢˜ã€‚

é—®é¢˜ç±»åˆ«ï¼š
- cannot_access: æ‰“ä¸å¼€ç½‘ç«™
- login_failed: ç™»å½•ä¸ä¸Š
- feature_broken: åŠŸèƒ½ä¸å¥½ç”¨
- slow_performance: è¿è¡Œå¤ªæ…¢
- data_lost: æ•°æ®ä¸¢å¤±
- display_error: æ˜¾ç¤ºæœ‰é—®é¢˜
- payment_issue: æ”¯ä»˜é—®é¢˜
- dont_know_how: ä¸ä¼šæ“ä½œ
- other: å…¶ä»–é—®é¢˜

è¿”å›JSONæ ¼å¼ï¼š
{
  "category": "é—®é¢˜ç±»åˆ«",
  "confidence": 0.0-1.0,
  "possible_causes": ["å¯èƒ½åŸå› 1", "å¯èƒ½åŸå› 2"],
  "recommended_fixes": [
    {"fix_id": "ä¿®å¤ID", "reason": "ä¸ºä»€ä¹ˆæ¨è"}
  ],
  "need_screenshot": true/false,
  "need_more_info": true/false,
  "questions_to_ask": ["å¦‚æœéœ€è¦æ›´å¤šä¿¡æ¯ï¼Œè¦é—®çš„é—®é¢˜"]
}

å¯ç”¨çš„ä¿®å¤IDï¼š
- check_server_status, refresh_dns, restart_service
- reset_password, unlock_account, clear_session
- clear_cache, restore_backup
- show_tutorial, connect_guide
"""

        response = await self.client.messages.create(
            model=self.settings.default_model,
            max_tokens=500,
            system=system_prompt,
            messages=[{"role": "user", "content": context}]
        )

        try:
            content = response.content[0].text
            if "```json" in content:
                content = content.split("```json")[1].split("```")[0]
            elif "```" in content:
                content = content.split("```")[1].split("```")[0]

            data = json.loads(content)

            return AutoDiagnosis(
                result=DiagnosisResult.IDENTIFIED if data.get("confidence", 0) > 0.7 else DiagnosisResult.PARTIAL,
                category=IssueCategory(data.get("category", "other")),
                confidence=data.get("confidence", 0.5),
                possible_causes=data.get("possible_causes", []),
                recommended_fixes=data.get("recommended_fixes", []),
                need_screenshot=data.get("need_screenshot", False),
                need_more_info=data.get("need_more_info", False),
                questions_to_ask=data.get("questions_to_ask", [])
            )

        except Exception:
            return AutoDiagnosis(
                result=DiagnosisResult.UNKNOWN,
                category=IssueCategory.OTHER,
                confidence=0.3,
                possible_causes=["éœ€è¦æ›´å¤šä¿¡æ¯æ¥åˆ¤æ–­"],
                recommended_fixes=[],
                need_more_info=True,
                questions_to_ask=["èƒ½è¯¦ç»†è¯´è¯´æ‚¨é‡åˆ°äº†ä»€ä¹ˆé—®é¢˜å—ï¼Ÿ"]
            )

    async def _generate_response(
        self,
        session: SupportSession,
        diagnosis: AutoDiagnosis,
        screenshot_analysis: Optional[ScreenshotAnalysis]
    ) -> str:
        """ç”Ÿæˆ AI å›å¤"""
        issue_config = ISSUE_CONFIGS.get(diagnosis.category, ISSUE_CONFIGS[IssueCategory.OTHER])

        system_prompt = """ä½ æ˜¯ä¸€ä¸ªè¶…çº§å‹å¥½çš„AIå®¢æœï¼Œæ­£åœ¨å¸®åŠ©ä¸€ä¸ªå®Œå…¨ä¸æ‡‚æŠ€æœ¯çš„ç”¨æˆ·è§£å†³é—®é¢˜ã€‚

æ²Ÿé€šåŸåˆ™ï¼š
1. ç”¨æœ€ç®€å•çš„å¤§ç™½è¯ï¼Œç»å¯¹ä¸ç”¨æŠ€æœ¯æœ¯è¯­
2. è¡¨è¾¾å…³å¿ƒå’Œç†è§£
3. ç»™å‡ºæ˜ç¡®ã€å…·ä½“çš„å»ºè®®
4. ä¿æŒè€å¿ƒå’Œé¼“åŠ±
5. å¿…è¦æ—¶ç”¨æ¯”å–»å’Œç”Ÿæ´»ä¾‹å­

å›å¤è¦æ±‚ï¼š
- å…ˆè¡¨ç¤ºç†è§£ç”¨æˆ·çš„é—®é¢˜
- ç®€å•è§£é‡Šå¯èƒ½çš„åŸå› 
- ç»™å‡º1-2ä¸ªæœ€å¯è¡Œçš„å»ºè®®
- ä¸è¶…è¿‡100å­—
- å¯ä»¥ç”¨é€‚å½“çš„è¡¨æƒ…ç¬¦å·"""

        context = f"""è¯Šæ–­ç»“æœï¼š
- é—®é¢˜ç±»å‹ï¼š{issue_config['label']}
- å¯èƒ½åŸå› ï¼š{', '.join(diagnosis.possible_causes[:2])}
- ç½®ä¿¡åº¦ï¼š{diagnosis.confidence}

ä¼šè¯å†å²ï¼š
{self._format_messages(session.messages[-3:])}

{"æˆªå›¾æ˜¾ç¤ºï¼š" + screenshot_analysis.description if screenshot_analysis else ""}
"""

        response = await self.client.messages.create(
            model=self.settings.default_model,
            max_tokens=300,
            system=system_prompt,
            messages=[{"role": "user", "content": context}]
        )

        return response.content[0].text

    def _get_suggested_fixes(self, diagnosis: AutoDiagnosis) -> List[AutoFix]:
        """è·å–å»ºè®®çš„ä¿®å¤æ–¹æ¡ˆ"""
        fixes = []
        for rec in diagnosis.recommended_fixes[:3]:
            fix_id = rec.get("fix_id") if isinstance(rec, dict) else rec
            if fix_id in AUTO_FIX_TEMPLATES:
                fixes.append(AUTO_FIX_TEMPLATES[fix_id])
        return fixes

    def _generate_quick_replies(self, diagnosis: AutoDiagnosis) -> List[str]:
        """ç”Ÿæˆå¿«æ·å›å¤"""
        replies = []

        if diagnosis.need_more_info:
            replies.extend(diagnosis.questions_to_ask[:2])

        issue_config = ISSUE_CONFIGS.get(diagnosis.category)
        if issue_config:
            replies.append(f"æ˜¯çš„ï¼Œå°±æ˜¯{issue_config['label']}")

        replies.extend([
            "é—®é¢˜è§£å†³äº†ï¼Œè°¢è°¢ï¼",
            "è¿˜æ˜¯ä¸è¡Œï¼Œè¯·å¸®æˆ‘çœ‹çœ‹",
            "æˆ‘è¦æ‰¾äººå·¥å®¢æœ"
        ])

        return replies[:5]

    def _should_escalate(self, session: SupportSession, diagnosis: AutoDiagnosis) -> bool:
        """åˆ¤æ–­æ˜¯å¦éœ€è¦å‡çº§åˆ°äººå·¥"""
        # å¤šæ¬¡ä¿®å¤å¤±è´¥
        failed_attempts = len([a for a in session.fix_attempts if not a.get("success", False)])
        if failed_attempts >= self.settings.escalation_threshold:
            return True

        # è¯Šæ–­ç½®ä¿¡åº¦å¤ªä½
        if diagnosis.confidence < 0.3:
            return True

        # ä¸¥é‡é—®é¢˜
        if session.urgency == IssueUrgency.CRITICAL:
            return True

        # æ•°æ®ä¸¢å¤±é—®é¢˜
        if diagnosis.category == IssueCategory.DATA_LOST:
            return True

        return False

    async def _execute_fix_action(self, session: SupportSession, fix: AutoFix) -> Dict[str, Any]:
        """æ‰§è¡Œä¿®å¤åŠ¨ä½œ"""
        # è¿™é‡Œæ˜¯æ¨¡æ‹Ÿå®ç°ï¼Œå®é™…éœ€è¦å¯¹æ¥å„ç§æœåŠ¡

        if fix.id == "check_server_status":
            # æ£€æŸ¥æœåŠ¡çŠ¶æ€
            return {
                "success": True,
                "message": "æœåŠ¡å™¨è¿è¡Œæ­£å¸¸ï¼å¯èƒ½æ˜¯æ‚¨çš„ç½‘ç»œæœ‰ç‚¹é—®é¢˜ï¼Œè¯•è¯•åˆ·æ–°é¡µé¢ï¼Ÿ",
                "next_steps": ["åˆ·æ–°é¡µé¢è¯•è¯•", "æ¢ä¸ªæµè§ˆå™¨è¯•è¯•"]
            }

        elif fix.id == "clear_cache":
            return {
                "success": True,
                "message": "ç¼“å­˜å·²ç»æ¸…ç†äº†ï¼é¡µé¢åº”è¯¥ä¼šé‡æ–°åŠ è½½æœ€æ–°çš„å†…å®¹ã€‚",
                "next_steps": ["åˆ·æ–°é¡µé¢", "çœ‹çœ‹é—®é¢˜æ˜¯å¦è§£å†³"]
            }

        elif fix.id == "reset_password":
            return {
                "success": True,
                "message": "é‡ç½®å¯†ç çš„é‚®ä»¶å·²ç»å‘åˆ°æ‚¨çš„é‚®ç®±äº†ï¼è¯·æŸ¥æ”¶é‚®ä»¶ï¼ŒæŒ‰ç…§é‡Œé¢çš„é“¾æ¥è®¾ç½®æ–°å¯†ç ã€‚",
                "details": "å¦‚æœæ²¡æ”¶åˆ°é‚®ä»¶ï¼Œè®°å¾—çœ‹çœ‹åƒåœ¾é‚®ä»¶æ–‡ä»¶å¤¹ã€‚",
                "next_steps": ["æŸ¥çœ‹é‚®ç®±", "ç‚¹å‡»é‡ç½®é“¾æ¥", "è®¾ç½®æ–°å¯†ç ", "é‡æ–°ç™»å½•"]
            }

        elif fix.id == "show_tutorial":
            return {
                "success": True,
                "message": "æ•™ç¨‹å·²ç»å‡†å¤‡å¥½äº†ï¼æˆ‘æ¥ä¸€æ­¥ä¸€æ­¥æ•™æ‚¨ã€‚",
                "next_steps": ["è·Ÿç€æ•™ç¨‹æ“ä½œ"]
            }

        elif fix.id == "connect_guide":
            # è¿æ¥åˆ° AI å¯¼æ¸¸æœåŠ¡
            return {
                "success": True,
                "message": "å·²ç»å¸®æ‚¨è¿æ¥åˆ°äº§å“å¯¼æ¸¸äº†ï¼Œå®ƒä¼šä¸€æ­¥ä¸€æ­¥æ•™æ‚¨æ“ä½œï¼",
                "details": "redirect_to_guide"
            }

        else:
            return {
                "success": True,
                "message": f"ã€Œ{fix.name}ã€å·²ç»å®Œæˆäº†ï¼çœ‹çœ‹é—®é¢˜æ˜¯å¦è§£å†³ã€‚"
            }

    async def _connect_to_guide(self, session: SupportSession, request: SupportRequest) -> SupportResponse:
        """è¿æ¥åˆ° AI å¯¼æ¸¸"""
        # è°ƒç”¨ AI å¯¼æ¸¸æœåŠ¡
        # è¿™é‡Œç®€åŒ–å¤„ç†ï¼Œå®é™…éœ€è¦é€šè¿‡ gRPC æˆ– HTTP è°ƒç”¨
        return SupportResponse(
            session_id=session.id,
            message="æˆ‘ç†è§£æ‚¨ä¸å¤ªæ¸…æ¥šæ€ä¹ˆæ“ä½œã€‚æ²¡å…³ç³»ï¼æˆ‘å¸®æ‚¨è¿æ¥åˆ°äº§å“å¯¼æ¸¸ï¼Œå®ƒä¼šä¸€æ­¥ä¸€æ­¥æ•™æ‚¨ã€‚è¯·ç‚¹å‡»ä¸‹é¢çš„æŒ‰é’®å¼€å§‹å­¦ä¹ ã€‚",
            diagnosis=AutoDiagnosis(
                result=DiagnosisResult.IDENTIFIED,
                category=IssueCategory.DONT_KNOW_HOW,
                confidence=0.9,
                possible_causes=["æ–°ç”¨æˆ·ä¸ç†Ÿæ‚‰æ“ä½œ"],
                recommended_fixes=[{"fix_id": "connect_guide", "reason": "è¿æ¥åˆ°äº§å“å¯¼æ¸¸"}],
                need_screenshot=False,
                need_more_info=False
            ),
            suggested_fixes=[AUTO_FIX_TEMPLATES["connect_guide"]],
            quick_replies=["å¼€å§‹å­¦ä¹ ", "æˆ‘æƒ³é—®å…·ä½“é—®é¢˜", "æ‰¾äººå·¥å®¢æœ"],
            need_human=False
        )

    def _translate_error(self, error: str) -> str:
        """å°†æŠ€æœ¯é”™è¯¯ç¿»è¯‘æˆäººè¯"""
        translations = {
            "connection": "ç½‘ç»œè¿æ¥æœ‰ç‚¹é—®é¢˜",
            "timeout": "æœåŠ¡å™¨å“åº”å¤ªæ…¢äº†",
            "not found": "æ‰¾ä¸åˆ°ç›¸å…³å†…å®¹",
            "permission": "æ‚¨æ²¡æœ‰æƒé™è¿›è¡Œè¿™ä¸ªæ“ä½œ",
            "invalid": "è¾“å…¥çš„å†…å®¹æ ¼å¼ä¸å¯¹"
        }

        error_lower = error.lower()
        for key, trans in translations.items():
            if key in error_lower:
                return trans

        return "ç³»ç»Ÿé‡åˆ°äº†ä¸€ç‚¹å°é—®é¢˜"

    def _format_messages(self, messages: List[Message]) -> str:
        """æ ¼å¼åŒ–æ¶ˆæ¯å†å²"""
        formatted = []
        for msg in messages:
            role = "ç”¨æˆ·" if msg.role == MessageRole.USER else "å®¢æœ"
            formatted.append(f"{role}: {msg.content}")
        return "\n".join(formatted)

    async def _create_session(self, request: SupportRequest) -> SupportSession:
        """åˆ›å»ºæ–°ä¼šè¯"""
        return SupportSession(
            id=str(uuid.uuid4()),
            user_id=request.user_id,
            project_id=request.project_id,
            category=request.category
        )

    async def _save_session(self, session: SupportSession):
        """ä¿å­˜ä¼šè¯"""
        if self.db:
            await self.db.support_sessions.update_one(
                {"_id": session.id},
                {"$set": session.model_dump()},
                upsert=True
            )

        if self.redis_client:
            key = f"support_session:{session.id}"
            await self.redis_client.setex(
                key,
                self.settings.session_timeout_minutes * 60,
                session.model_dump_json()
            )

    async def _get_session(self, session_id: str) -> Optional[SupportSession]:
        """è·å–ä¼šè¯"""
        if self.redis_client:
            key = f"support_session:{session_id}"
            data = await self.redis_client.get(key)
            if data:
                return SupportSession.model_validate_json(data)

        if self.db:
            doc = await self.db.support_sessions.find_one({"_id": session_id})
            if doc:
                return SupportSession(**doc)

        return None


# åˆ›å»ºå…¨å±€å®ä¾‹
ai_support_service = AISupportService()
